[project]
name = "modelmatch"
version = "0.1.0"
description = "Evidence-based LLM model selection for your use case"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "litellm (>=1.84.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
